# ROS2-Orin-NX-8G

./: .gitignore  .robotrc  .set_default_device.sh  .typerc  .zshrc  README.md  command  gazebo_ins.md
.dtb/sub/: 99-usb-cam.rules  lidar.rules  xf_mic.rules
app/app/: lidar_controller.py  line_following.py
app/launch/: self_driving_node.launch.py
bringup/scripts/: slam.desktop  slam.sh  start_node.sh
calibration/config/: imu_calib.yaml
example/: setup.py
example/config/: bridge_plane_distance.yaml  garbage_classification_roi.yaml  line_follow_clean_roi.yaml
large_models/large_models/: setup.py
large_models_examples/: package.xml  setup.py
large_models_examples/large_models_examples/: llm_color_track.launch.py  llm_color_track.py  llm_control_move.launch.py  llm_control_move.py  llm_control_move_offline.py  llm_visual_patrol.py  navigation_controller.py  track_anything.py  vllm_navigation.launch.py  vllm_navigation.py  vllm_track.launch.py  vllm_track.py
msc/14568787b9f27199e9ec950aa0af565e/: cfg.ldata
navigation/config/: nav2_controller_teb.yaml  nav2_params.yaml
navigation/rviz/: navigation_controller.rviz  navigation_desktop.rviz
peripherals/launch/: depth_camera.launch.py  imu_filter.launch.py  imu_view.launch.py  joystick_control.launch.py  lidar.launch.py  usb_cam.launch.py
peripherals/rviz/: lidar_view.rviz
scripts/: quick_build.sh  ros_env.sh  sim.sh  sim_nav.sh  sim_slam.sh  start_gazebo_rviz.sh
simulations/robot_gazebo/: package.xml  setup.py
simulations/rosorin_description/: setup.py
src/driver/kinematics_msgs/: CMakeLists.txt
(+424 files in other folders)
